<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>eidassaml</groupId>
	<artifactId>starterkit</artifactId>
	<name>eIDAS-Node Starterkit</name>
	<version>1.1.1</version>
	<packaging>jar</packaging>

	<properties>

	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.apache.santuario</groupId>
				<artifactId>xmlsec</artifactId>
				<version>2.0.5</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
		    <groupId>org.opensaml</groupId>
		    <artifactId>opensaml-core</artifactId>
		    <version>3.3.0</version>
		</dependency>
		<dependency>
		    <groupId>org.opensaml</groupId>
		    <artifactId>opensaml-saml-api</artifactId>
		    <version>3.3.0</version>
		</dependency>
		<dependency>
		    <groupId>org.opensaml</groupId>
		    <artifactId>opensaml-security-api</artifactId>
		    <version>3.3.0</version>
		</dependency>
		
		<dependency>
		    <groupId>org.opensaml</groupId>
		    <artifactId>opensaml-xmlsec-impl</artifactId>
		    <version>3.3.0</version>
		</dependency>
		<dependency>
		    <groupId>org.opensaml</groupId>
		    <artifactId>opensaml-saml-impl</artifactId>
		    <version>3.3.0</version>
		</dependency>
		<dependency>
		    <groupId>org.opensaml</groupId>
		    <artifactId>opensaml-security-impl</artifactId>
		    <version>3.3.0</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jcl-over-slf4j</artifactId>
			<version>1.7.5</version>
		</dependency>
		
		<dependency>
		    <groupId>javax.xml.bind</groupId>
		    <artifactId>jaxb-api</artifactId>
		    <version>2.3.1</version>
		</dependency>
		
		<dependency>
	       <groupId>org.slf4j</groupId>
	       <artifactId>slf4j-log4j12</artifactId>
	       <version>1.7.5</version>
	       <scope>test</scope>
	   </dependency>
		<dependency>
		  <groupId>junit</groupId>
		  <artifactId>junit</artifactId>
		  <version>4.12</version>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>9</source>
					<target>9</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
